--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Портфолио Junior performance маркетолога</title>
   </head>
 
   <body>
